# usda-nass

./: .gitignore  README.md  pyproject.toml
.github/workflows/: run.yml
catalog/: status.json
data/state/: nass_quickstats.json
src/: main.py
src/ingest/: quickstats.py
src/nodes/: __init__.py  quickstats.py
src/subsets_utils/: orchestrator.py  runner.py
