[project]
name = "usda-nass"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "psutil>=5.9.0",
    "httpx",
    "pyarrow",
    "boto3",
    "tenacity",
    "ratelimit",
    "duckdb",
    "requests",
    "deltalake>=0.17.0",
    "sqlalchemy>=2.0.43",
]

[tool.uv]
dev-dependencies = [
    "psutil>=5.9.0",
]
